--- a/login .html
+++ b/login .html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Day la trang dang nhap</h1>
+    <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
